--- a/map-Copy1.ipynb
+++ b/map-Copy1.ipynb
@@ -13,15 +13,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0f8e1c47",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pyshp in c:\\users\\huwalli\\anaconda3\\lib\\site-packages (2.3.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -andas (c:\\users\\huwalli\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -andas (c:\\users\\huwalli\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -andas (c:\\users\\huwalli\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -andas (c:\\users\\huwalli\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -andas (c:\\users\\huwalli\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -andas (c:\\users\\huwalli\\anaconda3\\lib\\site-packages)\n"
      ]
     }
    ],
@@ -31,10 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ac2ac0db",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Huwalli\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "C:\\Users\\Huwalli\\anaconda3\\lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -124,7 +148,7 @@
        "4  MULTIPOLYGON (((120.08108 23.52412, 120.08161 ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
